--- a/idex.html
+++ b/idex.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://p101s2.github.io/pics/KimJongHyun.jpg" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="shortcut icon" href="img/favicon.ico" />
-    <title>Produce 101 Season 2 Rankings</title>
+    <title>Girls Planet 99 Rankings</title>
 </head>
 <body>
 
